--- a/app/Views/Home/Contact.cshtml
+++ b/app/Views/Home/Contact.cshtml
@@ -12,6 +12,6 @@
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:eric1@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:eric1@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:eric@example.com">eric@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:eric@example.com">eric@example.com</a>
 </address>
